Brief: credentials, profile Finished My account section for individual and third party Finished change credentials for individual and third party

--- a/software/client/app/src/main/res/values/strings.xml
+++ b/software/client/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="hint_city">City</string>
     <string name="hint_address">Address</string>
     <string name="hint_vat">VAT</string>
+    <string name="hint_new_username">New Username</string>
+    <string name="hint_new_password">New Password</string>
     <string name="hint_organization_name">Organization Name</string>
     <string name="button_view_data">View Data</string>
     <string name="button_new_request">New Request</string>
@@ -42,6 +44,8 @@
     <string name="button_watched_runs">Watched Runs</string>
     <string name="button_enrolled_runs">Enrolled Runs</string>
     <string name="button_search_runs">Search Runs</string>
+    <string name="button_change_username">Change Username</string>
+    <string name="button_change_password">Change Password</string>
     <string name="tab_individual">Individual</string>
     <string name="tab_third_party">Third Party</string>
     <string name="tab_request_group">Group</string>
