Brief: new run Individual can now create a run

--- a/software/client/app/src/main/res/values/strings.xml
+++ b/software/client/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="hint_city">City</string>
     <string name="hint_address">Address</string>
     <string name="hint_vat">VAT</string>
+    <string name="hint_date">Date</string>
+    <string name="hint_time">Time</string>
+    <string name="hint_title">Title</string>
     <string name="hint_new_username">New Username</string>
     <string name="hint_new_password">New Password</string>
     <string name="hint_organization_name">Organization Name</string>
@@ -35,6 +38,7 @@
     <string name="button_signup">Signup</string>
     <string name="button_login">Login</string>
     <string name="button_back">Back</string>
+    <string name="button_create">Create</string>
     <string name="button_change_credentials">Change Credentials</string>
     <string name="button_change_new_request">New Request</string>
     <string name="button_change_view_data">View Data</string>
