Updates from ShareLaTeX

--- a/ITD/main.tex
+++ b/ITD/main.tex
@@ -44,18 +44,18 @@ For both server and client side application the adopted language is Java: versio
 \paragraph{Pros:}
 
 \begin{itemize}
-    \item Object Oriented language
-    \item Cross-Platform support
-    \item Proprietary implementation of Persistence API
-    \item Proprietary implementation of Authentication and Access Control
-    \item Test-driven development
-    \item Scalability
-    \item High Performance
+    \item Object Oriented language;
+    \item Cross-Platform support;
+    \item Proprietary implementation of Persistence API;
+    \item Proprietary implementation of Authentication and Access Control;
+    \item Test-driven development;
+    \item Scalability;
+    \item High Performance.
 \end{itemize}
 
 \paragraph{Cons:}
 \begin{itemize}
-    \item Code Verbosity
+    \item Code Verbosity.
 \end{itemize}
 
 \subsection{Frameworks, Libraries and Other Software}
@@ -70,7 +70,11 @@ In the Design Document we proposed Google for Map libraries, but since June 2018
 \begin{itemize}
     \item Osmdroid;
     \item Osmbonuspack;
-    \item GraphView;
+    \item GraphView.
+\end{itemize}
+In addition, other client libraries are:
+\begin{itemize}    
+    \item Android Wearable;
     \item StompClient\footnote{For STOMP protocol, we implemented our set of libraries in order to make it work because public libraries available online works bad or does not work at all.}.
 \end{itemize}
 
