Updates from ShareLaTeX

--- a/ITD/main.tex
+++ b/ITD/main.tex
@@ -220,8 +220,8 @@ In order to build client mobile application within an IDE, you should use Androi
     \item Install android studio and Android Virtual Device;
     \item Open an existing android studio project:
     \newline\textit{"ferrantemattarutigliano/software/client/build.gradle"} and wait until import is complete;
-    \item Select file -> project structure. Make sure that Android NDK is installed;
-    \item Run the application and create a new virtual device (you can choose the default one, Nexus 6). Select an API with version > 15.
+    \item Select file ${->}$ project structure. Make sure that Android NDK is installed;
+    \item Run the application and create a new virtual device (you can choose the default one, Nexus 6). Select an API with version ${>}$ 15;
     \item If you want to use a local server, uncomment the appropriate line in \textit{app/java/com.github.ferrantemattarutigliano.software.client/httprequest/HttpConstant.java}.
     \begin{figure}[!htpb]
     \centering
