Updates from ShareLaTeX

--- a/ITD/main.tex
+++ b/ITD/main.tex
@@ -170,8 +170,8 @@ You should have the following configuration at the end:
 \subsubsection{Build with IDE}
 \begin{enumerate}
     \item Open as a project: \textit{"ferrantemattarutigliano/software/server/src/pom.xml"} and wait until import is complete;
-    \item Setup project sdk: file ->project structure -> project sdk (you need at least project language level 11);
-    \item Add configuration -> application -> main class: ServerApplication.
+    \item Setup project sdk: file {$->$} project structure {$->$} project sdk (you need at least project language level 11);
+    \item Add configuration {$->$} application {$->$} main class: ServerApplication.
     \begin{figure}[!htpb]
     \centering
     \includegraphics[height=50mm]{ITD/images/intellij_idea1.png}
