Updates from ShareLaTeX

--- a/ITD/main.tex
+++ b/ITD/main.tex
@@ -33,7 +33,7 @@ This paper also contains a detailed description of the whole implementation both
 
 Finally, it contains all the installation and build instruction both for client and server, needed to run the code.
 
-This document is intended for developers or anyone interested in the impleme-\newline ntation details of \textit{TrackMe}.
+This document is intended for developers or anyone interested in the implementation details of \textit{TrackMe}.
 
 \section{Requirements and Functions}
 This chapter is focused on highlighting requirements presented in previous documents, assuming the reader has previously read both Requirement and Design Document. In particular requirements implemented are from Data4Help and Track4Run services; AutomatedSos functionality instead has been not implemented because not requested by the customer.
@@ -175,6 +175,7 @@ You should have the following configuration:
     \centering
     \includegraphics[height=50mm]{ITD/images/intellij_idea1.png}
     \includegraphics[height=50mm]{ITD/images/intellij_idea2.png}
+    
     \end{figure}
 \end{enumerate}
 
