Updates from ShareLaTeX

--- a/ITD/main.tex
+++ b/ITD/main.tex
@@ -176,7 +176,6 @@ You should have the following configuration at the end:
     \centering
     \includegraphics[height=50mm]{ITD/images/intellij_idea1.png}
     \includegraphics[height=50mm]{ITD/images/intellij_idea2.png}
-    
     \end{figure}
 \end{enumerate}
 
@@ -234,7 +233,7 @@ In order to build client mobile application within an IDE, you should use Androi
 \paragraph{Known Error}
 Emulator: ERROR: x86 emulation currently requires hardware acceleration!
 
-\textbf{Solution:} tools -> SDK Manager -> SDK Tools (tab) and make sure that Intel x86 Emulator Accelerator is installed. If not, install it; if already installed, uninstall and re-install it.
+\textbf{Solution:} tools ${->}$ SDK Manager ${->}$ SDK Tools (tab) and make sure that Intel x86 Emulator Accelerator is installed. If not, install it; if already installed, uninstall and re-install it.
 
 \paragraph{Important Notes}
 \begin{itemize}
